--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: YAVSRG\: Interlude
+title: YAVSRG - Interlude
 description: Yet Another Vertically Scrolling Rhythm Game
